--- a/NativeGinClient.cbp
+++ b/NativeGinClient.cbp
@@ -32,7 +32,11 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="include/GinClient.h" />
 		<Unit filename="main.cpp" />
-		<Extensions />
+		<Unit filename="src/GinClient.cpp" />
+		<Extensions>
+			<lib_finder disable_auto="1" />
+		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
